--- a/stylesheets/simple.css
+++ b/stylesheets/simple.css
@@ -81,17 +81,17 @@ div#greenbox {
 
 
 #invitation {
-	  color:                brown;
-          font-family:          Geneva, Arial, Helvetica, sans-serif;
-          font-size:            10pt;
+	color:                brown;
+        font-family:          Geneva, Arial, Helvetica, sans-serif;
+        font-size:            10pt;
 	  
 }    
 #activities {
 
-	  color:                blue;
-          font-family:          Geneva, Arial, Helvetica, sans-serif;
-          font-size:            12pt;
-          background: url("../images/lakeOct2008.JPG") no-repeat;
+	color:                blue;
+        font-family:          Geneva, Arial, Helvetica, sans-serif;
+        font-size:            12pt;
+        background: url("../images/lakeOct2008.jpg") no-repeat;
 	margin: 20;
 }    
 ul.a {
